--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "blog": "markdown-folder-to-html editable/blog && mv editable/_blog dist/blog"
   },
   "repository": {
     "type": "git",
