add index file for blog that will be copied to dist/ using different npm script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "blog": "rm -rf dist/blog && markdown-folder-to-html editable/blog && mv editable/_blog dist/blog"
+    "blog-posts": "rm -rf dist/blog && markdown-folder-to-html editable/blog && mv editable/_blog dist/blog"
   },
   "repository": {
     "type": "git",
