--- a/package.json
+++ b/package.json
@@ -17,7 +17,5 @@
     "url": "https://github.com/RossHathaway/htn-new-site/issues"
   },
   "homepage": "https://github.com/RossHathaway/htn-new-site#readme",
-  "devDependencies": {
-    "markdown-folder-to-html": "^2.4.0"
-  }
+  "devDependencies": {}
 }
