--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "url": "https://github.com/RossHathaway/htn-new-site/issues"
   },
   "homepage": "https://github.com/RossHathaway/htn-new-site#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "ejs": "^3.1.5"
+  }
 }
