--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/RossHathaway/htn-new-site#readme",
   "devDependencies": {
-    "ejs": "^3.1.5"
+    "ejs": "^3.1.5",
+    "gray-matter": "^4.0.2"
   }
 }
