--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "ejs": "^3.1.5",
     "gray-matter": "^4.0.2"
+  },
+  "dependencies": {
+    "markdown-it": "^12.0.2"
   }
 }
