--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "blog-posts": "node editable/make-blog",
     "build-event-page": "node editable/build-events",
-    "build": "npm run blog-posts && npm run build-event-page && cp ./node_modules/instant.page.es5/instantpage.es5.js ./dist/js/instantpage.js"
+    "build": "npm run blog-posts && npm run build-event-page",
+    "copyModules": "cp ./node_modules/instant.page.es5/instantpage.es5.js ./dist/js/instantpage.js",
+    "removeEndings": "node ./removeEndings.js",
+    "buildProd": "npm run blog-posts && npm run build-event-page && npm run copyModules"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
   },
   "dependencies": {
     "instant.page.es5": "^2.0.0",
-    "markdown-it": "^12.0.2"
+    "markdown-it": "^12.0.2",
+    "rw-stream": "^0.3.3"
   }
 }
