first attempt to replace /index.html

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "instant.page.es5": "^2.0.0",
     "markdown-it": "^12.0.2",
     "recursive-readdir": "^2.2.2",
+    "replacestream": "^4.0.3",
     "rw-stream": "^0.3.3"
   }
 }
