--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/RossHathaway/htn-new-site#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-img": "^0.10.0",
     "ejs": "^3.1.5",
     "gray-matter": "^4.0.2"
   },
