--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-img": "^0.10.0",
     "ejs": "^3.1.5",
-    "gray-matter": "^4.0.2"
+    "gray-matter": "^4.0.2",
+    "recursive-readdir": "^2.2.2"
   },
   "dependencies": {
     "instant.page.es5": "^2.0.0",
     "markdown-it": "^12.0.2",
-    "recursive-readdir": "^2.2.2",
     "replacestream": "^4.0.3",
     "rw-stream": "^0.3.3"
   }
